--- a/workspace/lusio/lusio-web/src/main/webapp/WEB-INF/web.xml
+++ b/workspace/lusio/lusio-web/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,6 @@
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-	    <welcome-file>index.html</welcome-file>
+	    <welcome-file>webapp/index.html</welcome-file>
 	</welcome-file-list>
 </web-app>
